# agentknowledgemcp

./: CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  ELASTICSEARCH_SETUP.md  ElicitationRequest.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  README.md  REFACTOR.md  VERSION_CONTROL_DOCS.md  admin_server_migration_complete.md  claude_desktop_config_simple.json  demo_agent_workflow.py  demo_version_control.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_composed.py  test_content_validation.py  test_file_paths.py  test_simple_vcs.py  test_validation.py  test_version_control.md  test_version_control.py
.github/: FUNDING.yml  copilot-instructions.md
docs/: FILE_UNIFICATION_README.md  unified_file_tool.md
knowledge_base/: release-process-complete-version-checklist.md
scripts/: __init__.py  dev.py
src/: __init__.py  admin_handlers.py  admin_server.py  claude_desktop_config.json  composed_server.py  config.default.json  config.json  document_schema.py  elasticsearch_handlers.py  elasticsearch_server.py  fastmcp_server.py  file_server.py  main_server.py  main_server_implementation.md  server.py  tools.py  version_control_server.py
tests/: README.md  __init__.py  debug_error_pattern.py  debug_path.py  demo_agent_workflow.py  demo_config_management.py  demo_file_unification.py  explore_fastmcp_api.py  run_all_tests.py  test_ask_mcp_advance_direct.py  test_client_roots_integration.py  test_complete_enhanced_system.py  test_complete_fixed_workflow.py  test_comprehensive_merge.py  test_config.json  test_config_change.py  test_config_scenarios.py  (+26 more)
(+46 files in other folders)
